tests/diagnostics/types/literals/unknown_field/expect.txt
# exit: 1
input/main.lang0:4:18: error: unknown field 'y' on Point
      p := Point { y: 1 }
                   ^
input/main.lang0:4:10: error: missing field 'x' in Point literal
      p := Point { y: 1 }
           ^
input/main.lang0:4:5: error: unused variable 'p'
      p := Point { y: 1 }
      ^
